Switch to java 1.8